login and registration system done

--- a/coding_practice.ipynb
+++ b/coding_practice.ipynb
@@ -75,6 +75,39 @@
     "cursor.close()\n",
     "db.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ac31b1de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 'sajeed', 'sag.arnob@gmail.com', 'blank', '7676aaafb027c825bd9abab78b234070e702752f625b752e55e55b48e607e358', '{\"country\": \"\", \"city\": \"\", \"area\": \"\"}', 'ADM'),)\n",
+      "((1, 'sajeed', 'sag.arnob@gmail.com', '1234', '7676aaafb027c825bd9abab78b234070e702752f625b752e55e55b48e607e358', '{\"country\": \"bangladesh\", \"city\": \"\", \"area\": \"\"}', 'ADM'),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymysql, json\n",
+    "\n",
+    "db = pymysql.connect(host=\"localhost\", user=\"root\", password=\"\", database=\"flask\")\n",
+    "cursor = db.cursor()\n",
+    "\n",
+    "cursor.execute(\"SELECT * FROM user\")\n",
+    "print(cursor.fetchall())\n",
+    "\n",
+    "address = {\"country\": \"bangladesh\", \"city\": \"\", \"area\": \"\"}\n",
+    "\n",
+    "cursor.execute(f\"UPDATE user SET phone_number = '1234', address = '{json.dumps(address)}' WHERE user_id = 1\")\n",
+    "cursor.execute(\"SELECT * FROM user\")\n",
+    "print(cursor.fetchall())\n",
+    "cursor.close()\n",
+    "db.close()"
+   ]
   }
  ],
  "metadata": {
