blog articles page done

--- a/coding_practice.ipynb
+++ b/coding_practice.ipynb
@@ -108,6 +108,31 @@
     "cursor.close()\n",
     "db.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "95fb223c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 'sajeed', 'sag.arnob@gmail.com', 'blank', '7676aaafb027c825bd9abab78b234070e702752f625b752e55e55b48e607e358', '{\"country\": \"\", \"city\": \"\", \"area\": \"\"}', 'ADM'), (5, 'arnob', 'sag.arnob@yahoo.com', '1234', '8622f0f69c91819119a8acf60a248d7b36fdb7ccf857ba8f85cf7f2767ff8265', '{\"country\": \"Bangladesh\", \"city\": \"Dhaka\", \"area\": \"Gulshan\"}', 'MEM'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymysql\n",
+    "\n",
+    "mydb = pymysql.connect(host=\"localhost\", user=\"root\", password=\"\", database=\"flask\")\n",
+    "cursor = mydb.cursor()\n",
+    "\n",
+    "cursor.execute(\"SELECT * FROM user\")\n",
+    "print(cursor.fetchall())\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
